--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </p>
     <p id="text">Made with &#10084; by d33kshant</p>
     </div>
+    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="d33kshant" data-color="#3a86ff" data-emoji="😄"  data-font="Poppins" data-text="Support Me" data-outline-color="#ffffff" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>
 </body>
 
 </html>
